crates/language-v2/tests/src/fail/p0_parsing/duplicate_set_entry/test.stderr
error: Set entries must be unique.
 --> src/fail/p0_parsing/duplicate_set_entry/test.rs:6:26
  |
6 |     versions = ["1.0.0", "1.0.0", "3.0.0"],
  |                          ^^^^^^^
